# microservice

./: Cargo.toml  README.md  docker-compose.yml
Docker/: Dockerfile  Dockerfile-db
schema/: messages.sql
src/: main.rs  models.rs  schema.rs
