[package]
name = "microservices"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="2.2.3", features = ["postgres"]}
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.14.12"
log = "0.4.1"
maud = { git = "https://github.com/lfairy/maud" }
postgres = "0.15.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
syn = "0.12.7"
url = "1.6.0"
